[tool.poetry]
name = "cap-rx-nadac"
version = "0.1.0"
description = ""
authors = ["Khai Nguyen <1192669+khaister@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.31.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
